tests/error/comptime/pointer_arithmetic02.bz
// error: invalid pointer arithmetic operation with type '*i32' and offset -1
// note: while evaluating expression at compile time
// note: address points to this global object
// error: failed to evaluate expression at compile time
function test()
{
	(consteval {
		consteval i = 0;
		&i - 1;
	});
}
